--- a/admissionfrontend/package.json
+++ b/admissionfrontend/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "concurrently \"cd.. && cd admissionfrontend && nodemon index.js  --host 0.0.0.0\" \"ng serve --host 0.0.0.0 --o\"",
+    "start": "concurrently \"cd ../backend && nodemon index.js  --host 0.0.0.0\" \"ng serve --host 0.0.0.0 --o\"",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
