--- a/admissionfrontend/package.json
+++ b/admissionfrontend/package.json
@@ -20,6 +20,8 @@
     "@angular/router": "~12.0.3",
     "bootstrap": "^5.1.3",
     "concurrently": "^7.2.0",
+    "html-to-pdfmake": "^2.3.11",
+    "pdfmake": "^0.2.5",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
