--- a/admissionfrontend/angular.json
+++ b/admissionfrontend/angular.json
@@ -30,7 +30,9 @@
               "src/styles.css",
               "./node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/exceljs/dist/exceljs.min.js"
+            ]
           },
           "configurations": {
             "production": {
