--- a/admissionfrontend/package.json
+++ b/admissionfrontend/package.json
@@ -18,19 +18,25 @@
     "@angular/platform-browser": "~12.0.3",
     "@angular/platform-browser-dynamic": "~12.0.3",
     "@angular/router": "~12.0.3",
+    "@types/exceljs": "^1.3.0",
     "bootstrap": "^5.1.3",
     "concurrently": "^7.2.0",
+    "exceljs": "^4.3.0",
+    "file-saver": "^2.0.5",
     "html-to-pdfmake": "^2.3.11",
     "pdfmake": "^0.2.5",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.0.3",
     "@angular/cli": "~12.0.3",
     "@angular/compiler-cli": "~12.0.3",
+    "@types/file-saver": "^2.0.5",
     "@types/jasmine": "~3.6.0",
+    "@types/jest": "^28.1.1",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.7.0",
     "karma": "~6.3.0",
